--- a/templates/spiaa.html
+++ b/templates/spiaa.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>stock-info-and-analysis-template</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Navbar-Right-Links-Dark-icons.css">
+    <link rel="stylesheet" href="{{  url_for('static', filename='css/bootstrap.min.css')  }}">
+    <link rel="stylesheet" href="{{  url_for('static', filename='css/Navbar-Right-Links-Dark-icons.css')  }}">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <p style="width: 300px;margin-top: .5rem;margin-left: 3rem;display: inline-block;"><strong>Currency:&nbsp;</strong>{{currency}}</p>
     </div>
     <div id="candle_graph" style="width: 100%;height: 300px;margin-top: 1rem;margin-right: 1rem;margin-bottom: 1rem;margin-left: 1rem;display: flex;position: relative;"></div>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="{{  url_for('static', filename='assets/bootstrap/js/bootstrap.min.js')  }}"></script>
 </body>
 
 </html>
