--- a/templates/preview.html
+++ b/templates/preview.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Analyzer</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="navbar">
-        <div class="logo">Real-Time Stock Price Analyzer</div>
+        <div class="logo">
+            <img src="pupt.png" alt="PUPT" />
+            <h4>REAL-TIME STOCK PRICE ANALYZER</h4>
+          </div>
         <nav>
             <ul>
-                <li><a href="{{ url_for('home') }}">Home</a></li>
-                <li><a href="{{ url_for('add_stocks') }}">Add Stocks</a></li>
-                <li><a href="{{ url_for('remove_stocks') }}">Remove Stocks</a></li>
+                <li><a href="preview.html">Home</a></li>
+                <li><a href="adds.html">Your Stocks</a></li>
             </ul>
         </nav>
     </header>
@@ -26,12 +28,12 @@
 
         <section id="buy" class="section">
             <h1>Buy Stocks</h1>
-            <a href="/buy.html" class="redirect">Proceed to Buy</a>
+            <a href=".com" class="redirect">Link 1</a>
         </section>
 
-        <section id="sell" class="section">
+        <section id="buy" class="section">
             <h1>Sell Stocks</h1>
-            <a href="/sell.html" class="redirect">Proceed to Sell</a>
+            <a href=".com" class="redirect">Link 1</a>
         </section>
     </main>
 
