--- a/templates/spiaa.html
+++ b/templates/spiaa.html
@@ -1,72 +1,97 @@
 <!DOCTYPE html>
-<html data-bs-theme="light" lang="en">
-
-<head> 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>stock-info-and-analysis-template</title>
-    <link rel="stylesheet" href="{{  url_for('static', filename='css/bootstrap.min.css')  }}">
-    <link rel="stylesheet" href="{{  url_for('static', filename='css/Navbar-Right-Links-Dark-icons.css')  }}">
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RTSPA</title>
+  <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+  <style>
+    nav {
+      z-index : 1100;
+    }
+    .nav-link {
+      margin-right: 20px;
+    }
+    #search {
+      width: 300px;
+      padding: 5px;
+      border-radius: 5px;
+    }
+    #suggestions {
+      position: absolute;
+      width: 300px;
+      max-height: 200px;
+      overflow-y: auto;
+      background-color: #efefef;
+    }
+    #suggestions:hover {
+      background-color: rgb(202, 255, 252)
+    }
+    #candleChart {
+      width: 100%;
+      height: 500px;
+      margin: 0 auto;
+    }
+  </style>
 </head>
-
 <body>
-    <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
-        <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="#">
-                <span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon">
-                </span>
-                <span>Real-Time Stock Price Analyis</span>
-            </a>
-            <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5">
-                <span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navcol-5">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="{{  url_for('home')  }}">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{  url_for('stocks')  }}">My Stocks</a></li>
-                </ul>
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#"><input type="search" placeholder="Search Stocks"></a></li>
-                </ul>
+  <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
+    <div class="container">
+      <a class="navbar-brand d-flex align-items-center" href="#">
+        <span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon">
+        </span>
+        <span>Real-Time Stock Price Analyis</span>
+      </a>
+      <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5">
+        <span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navcol-5">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('home') }}">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('add_stocks') }}">My Stocks</a></li>
+        </ul>
+        <ul class="navbar-nav"></ul>
+          <li class="nav-item">
+            <div style="position: relative;">
+              <input type="text" id="search" placeholder="Search Stocks">
+              <div id="suggestions" style="background-color:#eee;"></div>
             </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+    <div id="main_info" style="margin-top: 1rem">
+        <h1 id="company_name" style="margin-left: 2.5rem;margin-top: 1rem;width: 400px;font-weight: bold;font-size: 30px;display: inline-block;--bs-body-font-weight: 400;"><strong>{{name}}</strong> ({{symbol}})</h1>      
         </div>
-    </nav>
-    <div id="main_info">
-        <h1 id="company_name" style="margin-left: 2.5rem;margin-top: 1rem;width: 250px;font-weight: bold;font-size: 35px;display: inline-block;--bs-body-font-weight: 400;">{{stock_name}}</h1>
-        <h1 id="nasdaq_tag" style="display: inline-block;font-weight: bold;margin-left: 2.5rem;font-size: 25px;">{{symbol}}</h1>
+    <div id="candle_graph" style="width: 97%;height: 300px;margin-top: 1rem;margin-right: 1rem;margin-bottom: 1rem;margin-left: 1rem;display: flex;position: relative;">
+        <div id="candleChart" style="width: 100%;"></div>
     </div>
-    <div id="sub_info">
-        <p style="width: 300px;margin-top: .5rem;margin-left: 3rem;display: inline;"><strong>Region:&nbsp;</strong>{{region}}</p>
-        <p style="width: 300px;margin-top: .5rem;margin-left: 3rem;display: inline-block;"><strong>Currency:&nbsp;</strong>{{currency}}</p>
-    </div>
-    <div id="candle_graph" style="width: 100%;height: 300px;margin-top: 1rem;margin-right: 1rem;margin-bottom: 1rem;margin-left: 1rem;display: flex;position: relative;">
-        <div id="candleChart" style="width: 100%; height: 100%;"></div>
-    </div>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script>
-        const chartData = {{ chart_data | safe }};
+        const chartData = JSON.parse('{{ chart_data | safe }}');
         
         const dates = chartData.map(data => new Date(data.t));
         const open = chartData.map(data => data.o);
         const high = chartData.map(data => data.h);
         const low = chartData.map(data => data.l);
         const close = chartData.map(data => data.c);
-
+        
         const trace = {
             x: dates,
             close: close,
-            decreasing: {line: {color: 'red'}},
+            decreasing: {line: {color: '#A32424'}},
             high: high,
-            increasing: {line: {color: 'green'}},
+            increasing: {line: {color: '#3BA324'}},
             low: low,
             open: open,
             type: 'candlestick',
             xaxis: 'x',
             yaxis: 'y'
         };
-
+        
         const data = [trace];
-
+        
         const layout = {
             dragmode: 'zoom',
             showlegend: false,
@@ -76,10 +101,13 @@
                 }
             }
         };
-
-        Plotly.newPlot('candleChart', data, layout);
+        
+        Plotly.newPlot('candleChart', data, layout, {responsive: true});
     </script>
-    <script src="{{  url_for('static', filename='assets/bootstrap/js/bootstrap.min.js')  }}"></script>
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
