Last polygon api integration, switching to nasdaq now

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RTSPA</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
@@ -168,7 +169,7 @@
             </div>
             <div>
               <small class="text-muted">Volume</small>
-              <p class="mb-0">{{volume_3}}M</p>
+              <p class="mb-0">{{vol_3}}M</p>
             </div>
           </div>
         </div>
