minor updates: - fixed stock price chart - updated the volume part in the trending stocks by changing from millions to thousands

--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
             </div>
             <div>
               <small class="text-muted">Volume</small>
-              <p class="mb-0">{{stock.volume}}M</p>
+              <p class="mb-0">{{stock.volume}}K</p>
             </div>
           </div>
         </div>
