--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
     <div class="col-md-4 mb-3">
       <div class="card">
         <div class="card-body" style="transform:rotate(0)">
-          <a href="/spiaa?symbol={{stock.symbol}}&name={{stock.name}}" class="stretched-link"> </a>
+          <a href="javascript:void(0);" onclick="setStockAndRedirect('{{ stock.symbol }}', '{{ stock.name }}');" class="stretched-link"></a>
           <div class="d-flex justify-content-between align-items-center">
             <div>
               <h5 class="card-title mb-0">{{stock.symbol}}</h5>
@@ -112,5 +112,11 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script>
+    async function setStockAndRedirect(symbol, name) {
+      await fetch(`/set_stock?symbol=${symbol}&name=${name}`);
+      window.location.href = "/spiaa";
+    }
+  </script>
 </body>
 </html>
