--- a/templates/spiaa.html
+++ b/templates/spiaa.html
@@ -37,7 +37,7 @@
 <body>
   <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="#">
+      <a class="navbar-brand d-flex align-items-center" href="{{  url_for('home')}}">
         <span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon">
         </span>
         <span>Real-Time Stock Price Analyis</span>
@@ -73,7 +73,7 @@
         
         const dates = chartData.map(data => {
             let date = new Date(data.t);
-            date.setHours(date.getHours() + 3);
+            date.setHours(date.getHours());
             return date;
         });
         const open = chartData.map(data => data.o);
