--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sign in & Sign up Form</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}" />
 </head>
 <body>
   <main>
@@ -15,7 +15,7 @@
           <!-- Forgot Password Form -->
           <form autocomplete="off" class="forgot-password-form" method="POST">
             <div class="logo">
-              <h4>REAL-TIME STOCK PRICE ANALYZER</h4>
+              <h4>SWIFT STOCK</h4>
             </div>
 
             <div class="heading">
@@ -59,9 +59,9 @@
         <!-- Carousel Section -->
         <div class="carousel">
           <div class="images-wrapper">
-            <img src="rts.png" class="image img-1 show" alt="" />
+            <img src="{{ url_for('static', filename='images/rts.png') }}" class="image img-1 show" alt="" />
             <img src="#" class="image img-2" alt="" />
-            <img src="./img/image3.png" class="image img-3" alt="" />
+            <img src="{{ url_for('static', filename='images/image3.png') }}" class="image img-3" alt="" />
           </div>
 
           <div class="text-slider">
@@ -83,7 +83,7 @@
       </div>
     </div>
   </main>
-  <script src="carousel.js"></script>
-  <script src="forgot.js"></script> 
+  <script src="{{ url_for('static', filename='js/carousel.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/forgot.js') }}"></script> 
 </body>
 </html>
