--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
       <div class="collapse navbar-collapse" id="navcol-5">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link active" href="{{ url_for('home') }}">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="{{ url_for('add_stocks') }}">My Stocks</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('add_stocks') }}">Portfolios</a></li>
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item">
