--- a/templates/adds.html
+++ b/templates/adds.html
@@ -11,14 +11,14 @@
         <div class="logo">Real-Time Stock Price Analyzer</div>
             <ul>
                 <li><a href="preview.html">Home</a></li>
-                <li><a href="adds.html">Your Stocks</a></li>
+                <li><a href="adds.html">Portfolio</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section id="add" class="section">
-            <h1>YOUR STOCKS</h1>
+            <h1>PORTFOLIO</h1>
             
             <!-- User-owned stocks table -->
             <h2>Owned</h2>
