added email & email conf

--- a/templates/register.html
+++ b/templates/register.html
@@ -49,6 +49,30 @@
                 />
               </div>
 
+              <div class="input-wrap">
+                <input
+                  type="email"
+                  id="username"
+                  minlength="50"
+                  class="input-field"
+                  autocomplete="off"
+                  placeholder="Enter Email"
+                  required
+                />
+              </div>
+
+              <div class="input-wrap">
+                <input
+                  type="email"
+                  id="username"
+                  minlength="50"
+                  class="input-field"
+                  autocomplete="off"
+                  placeholder="Confirm Email"
+                  required
+                />
+              </div>
+
               <p class="text">
                 By signing up, I agree to the
                 <a href="#">Terms of Services</a> and
