--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sign in & Sign up Form</title>
+  <title>SwiftStock - Login</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}" />
 </head>
 <body>
@@ -13,7 +13,7 @@
       <div class="inner-box">
         <div class="forms-wrap">
           <!-- Sign-In Form -->
-          <form autocomplete="off" class="sign-in-form" method="POST" action="{{ url_for('login') }}">
+          <form autocomplete="off" class="sign-in-form" method="POST">
             <div class="logo">
               <h4>SWIFT STOCK</h4>
             </div>
@@ -31,13 +31,15 @@
                   minlength="4"
                   class="input-field"
                   autocomplete="off"
-                  placeholder="Enter Username"
+                  name="email"
+                  placeholder="Email"
                   required
                 />
               </div>
 
               <div class="input-wrap">
                 <input
+                  name="password"
                   type="password"
                   minlength="8"
                   class="input-field"
