to be finished, power nap muna ako

--- a/templates/spiaalatest.html
+++ b/templates/spiaalatest.html
@@ -60,7 +60,7 @@
       <div class="col-md-8 d-flex justify-content-center" style="margin-top: -1rem;">
         <div id="stock_details" class="card w-100">
           <div class="card-body">
-            <h3 class="card-title">Stock Owned:</h3>
+            <h3 class="card-title">Stock Owned: {{data[0]}}</h3>
             <ul class="list-group list-group-flush">
               <li class="list-group-item"><strong>Price and Range Analysis</strong></li>
               <li class="list-group-item d-flex justify-content-between"><span>Previous Close:</span><span>150.00</span></li>
