--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,9 @@
     <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="{{ url_for('home') }}">
           <span class="bs-icon-sm d-flex justify-content-center align-items-center me-3">
-            <img src="{{ url_for('static', filename='images/logo.svg') }}" 
+            <img src="{{ url_for('static', filename='images/LGO.png') }}" 
                  alt="Logo" 
-                 width="80" 
+                 width="" 
                  height="80" 
                  style="filter: invert(1); margin-right: 15px; border-radius: 75%;">
         </span>
@@ -115,7 +115,7 @@
                   </div>
               </div>
               <div class="mb-3">
-                  <h5 class="mb-0">Worst Performing Stock</h5>
+                  <h5 class="mb0">Worst Performing Stock</h5>
                   <div class="d-flex justify-content-between">
                       <span class="text-muted">TSLA</span>
                       <span class="text-muted">Tesla Corp</span>
