major refactoriing with user account functions overhaul

--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -35,21 +35,17 @@
                   required
                 />
               </div>
-
-              <!-- Verification Code Section (lilitaw after submit ng email) -->
-              <div class="input-wrap" id="verification-section" style="display: none;">
+              <div class="input-wrap" id="verification-section">
                 <input
                   type="password"
-                  minlength="4"
+                  minlength="8"
                   class="input-field"
-                  id="verification-code"
+                  id="new_password"
                   autocomplete="off"
-                  placeholder="Enter Verification Code"
+                  placeholder="Enter New Password"
                   required
                 />
               </div>
-
-              <!-- Submit Button -->
               <input type="submit" value="Submit" class="sign-btn" id="submit-btn" />
             </div>
           </form>
