--- a/templates/spiaalatest.html
+++ b/templates/spiaalatest.html
@@ -82,11 +82,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6" style="margin-top: 2rem;">
-        <div id="candle_graph">
-          <div id="candleChart"></div>
-        </div>
-      </div>
+      <div style="height: 1rem"></div>
     </div>
   </div>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
