--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,9 @@
           <!-- Sign-In Form -->
           <form autocomplete="off" class="sign-in-form" method="POST">
             <div class="logo">
-              <h4>SWIFT STOCK</h4>
+              <img src="{{ url_for('static', filename='images/logo.svg') }}" 
+                   alt="Logo" 
+                   class="logo-img">
             </div>
 
             <div class="heading">
